doc: fix wording

--- a/_includes/table-print-response-types.html
+++ b/_includes/table-print-response-types.html
@@ -1,4 +1,4 @@
-<h4>Reponse types</h4>
+<h4>Response types</h4>
 This endpoint supports two types of response JSON and PDF. 
 <br>
 Response type can be changed by adding <span class="code-inline">.pdf</span> or <span class="code-inline">.json</span> to the URL.
