doc: update error codes

--- a/_includes/1.0/overview/errorcode.html
+++ b/_includes/1.0/overview/errorcode.html
@@ -135,6 +135,46 @@
         <td>Amount should be strictly positive.</td>
     </tr>
     <tr>
+        <td>3020</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The document is already converted.</td>
+    </tr>
+    <tr>
+        <td>3021</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The document cannot be converted to the wanted type.</td>
+    </tr>
+    <tr>
+        <td>3022</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>A quote with lost status cannot be converted.</td>
+    </tr>
+    <tr>
+        <td>3023</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The inventory quantity is too low.</td>
+    </tr>
+    <tr>
+        <td>3024</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The document has to be finalized.</td>
+    </tr>
+    <tr>
+        <td>3025</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The order has been partially or fully delivered.</td>
+    </tr>
+    <tr>
+        <td>3026</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The order has been prepared or is already in preparation.</td>
+    </tr>
+    <tr>
+        <td>3027</td>
+        <td><a href="http://tools.ietf.org/html/rfc4918#section-11.2" target="_blank">422</a></td>
+        <td>The order has already been received.</td>
+    </tr>
+    <tr>
         <td>4</td>
         <td><a href="http://tools.ietf.org/html/rfc6585#section-4" target="_blank">429</a></td>
         <td>Rate limited.</td>
