--- a/_includes/1.0/api/vendor-credit-memo.html
+++ b/_includes/1.0/api/vendor-credit-memo.html
@@ -3,7 +3,7 @@
     <h2>Vendor credit memos</h2>
     {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.vendor_credit_memos.url}}{% endhighlight %}
     <h3 id="vendorcreditmemojsonformat">JSON Format</h3>
-    <p>Vendor bills are represented as JSON objects which have the following keys:</p>
+    <p>Vendor credit memos are represented as JSON objects which have the following keys:</p>
 
     <table class="table table-bordered table-striped">
         <thead>
@@ -15,7 +15,7 @@
                 <td>{{ site.format.type.integer }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Automatically assigned when creating customers</td>
+                <td>Automatically assigned.</td>
             </tr>
             <tr>
                 <td>locked</td>
@@ -29,14 +29,14 @@
                 <td>{{ site.format.type.boolean }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>Has the document been finalized or sent to the Customer.</td>
+                <td>Has the document been finalized or sent to the Vendor.</td>
             </tr>
             <tr>
                 <td>sent_at</td>
                 <td>{{ site.format.type.date }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The date the document has been finalized or sent to the Customer.
+                <td>The date the document has been finalized or sent to the Vendor.
                     <br />Format: {{ site.format.date }}<br />
                 </td>
             </tr>
@@ -45,7 +45,7 @@
                 <td>{{ site.format.type.double }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Total of the payments made on that bill.</td>
+                <td>Total of the payments made on that credit memo.</td>
             </tr>
             <tr>
                 <td>unpaid</td>
@@ -117,15 +117,15 @@
                 <td>{{ site.format.type.double }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>The final total the customer needs to pay. All include (taxes, discounts, reduce).</td>
+                <td>The final total due by the vendor. All include (taxes, discounts, reduce).</td>
             </tr>
 
         </tbody>
     </table>
 
-    <h3 id="vendorbilljsonexample">JSON Example</h3>
+    <h3 id="vendorcreditmemojsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/vendor_bill.json %}{% endhighlight %}
 
-    <h3 id="vendorbillavailablemethods">Available Methods</h3>
+    <h3 id="vendorcreditmemoavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
 </div>
