doc: fix description text of the provider option

--- a/_includes/1.0/api/domain.html
+++ b/_includes/1.0/api/domain.html
@@ -17,7 +17,7 @@
         <tr>
             <td>provider</td>
             <td>{{ site.format.type.string }}</td>
-            <td>The bank name among: gapps, square, wix, pmeti, partner_portal, bnpp_fr, oneup_bank, lloyds, nhb, caixa <b>(mandatory)</b>.</td>
+            <td>The provider associated with the account to delete <b>(mandatory)</b>.</td>
         </tr>
         <tr>
             <td>account_id</td>
