add created_at and updated_at sorting info

--- a/_includes/1.0/api/bankaccount.html
+++ b/_includes/1.0/api/bankaccount.html
@@ -88,6 +88,10 @@
             <td>created_at</td>
             <td>Sorts by the creation date field.</td>
         </tr>
+        <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
         </tbody>
     </table>
 
