--- a/_includes/1.0/api/bankentry.html
+++ b/_includes/1.0/api/bankentry.html
@@ -173,6 +173,14 @@
             <td>absolute_amount</td>
             <td>Sorts by the absolute value of the amount field.</td>
         </tr>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
         </tbody>
     </table>
 
