--- a/_includes/1.0/api/projecttask.html
+++ b/_includes/1.0/api/projecttask.html
@@ -74,6 +74,23 @@
 
     <h3 id="projecttaskjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/projecttask.json %} {% endhighlight %}
+    
+    <h3 id="projecttasksorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
+        </tbody>
+    </table>
 
     <h3 id="projecttaskavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/readonly.html %}
