--- a/_includes/1.0/api/purchase-order.html
+++ b/_includes/1.0/api/purchase-order.html
@@ -100,6 +100,23 @@
 	<p>That example describe an UK Purchase order.</p>
     {% highlight bash %}{% include 1.0/api/json/purchase_order.json %}{% endhighlight %}
 
+    <h3 id="purchaseordersorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="purchaseorderavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/no-post.html %}
 
