--- a/_includes/1.0/api/salesorder.html
+++ b/_includes/1.0/api/salesorder.html
@@ -244,6 +244,10 @@
             <td>Sorts by the creation date field.</td>
         </tr>
         <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
+        <tr>
             <td>user_code</td>
             <td>Sorts by the user_code field.</td>
         </tr>
