--- a/_includes/1.0/api/productservice.html
+++ b/_includes/1.0/api/productservice.html
@@ -140,6 +140,23 @@
     <h3 id="productservicejsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/productservice.json %}{% endhighlight %}
 
+    <h3 id="productservicesorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="productserviceavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
 </div>
