--- a/_includes/1.0/api/vendor.html
+++ b/_includes/1.0/api/vendor.html
@@ -199,6 +199,10 @@
             <td>Sorts by the creation date field.</td>
         </tr>
         <tr>
+            <td>updated_at</td>
+            <td>Sorts by the update date field.</td>
+        </tr>
+        <tr>
             <td>full_name</td>
             <td>Sorts by full name field.</td>
         </tr>
